--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Generate static analytics data
-      run: npm run generate-data
-    
-    - name: Build
-      run: npm run build
+    - name: Build (static only - using committed analytics.json)
+      run: npm run build:static-only
     
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
